--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="toolbar">
             <h1>
-                <a href="/">
+                <a class="navlink" href="/">
                     <img src="images/logo.svg" width="140" alt="Coffee Masters">
                 </a>
             </h1>
@@ -32,8 +32,35 @@
                 </a>
             </nav>
         </div>
-
     </header>
+    <main></main>
+    <template id="menu-page-template">
+        <section>
+            <ul id="menu"></ul>
+        </section>
+    </template>
+    <template id="order-form-template">
+        <form>
+            <label for="name">Your Name</label>
+            <input name="name" required>
+            <label for="phone">Your Phone Number</label>
+            <input name="phone" type="tel">
+            <label for="email">Your Email</label>
+            <input name="email" type="email">
+            <button type="submit">Place Order</button>
+        </form>
+    </template>
+    <template id="details-page-template">
+        <header>   
+            <a href="#" onclick="app.router.go('/'); event.preventDefault()">&lt; Back</a>
+            <h2></h2>
+            <a></a>
+        </header>
+        <img src="">
+        <p class="description"></p>
+        <p class="price"></p>
+        <button>Add to cart</button>
+    </template>
 </body>
 
 </html>
