--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>Coffee Masters</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
 
-    <link rel="stylesheet" href="styles.css">
-    <link rel="apple-touch-icon" href="images/icons/icon.png">
-    <link rel="icon" href="images/icons/icon.png">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="apple-touch-icon" href="images/icons/icon.png" />
+    <link rel="icon" href="images/icons/icon.png" />
     <script src="app.js" defer type="module"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="toolbar">
-            <h1>
-                <a class="navlink" href="/">
-                    <img src="images/logo.svg" width="140" alt="Coffee Masters">
-                </a>
-            </h1>
-            <nav>
-                <a class="navlink material-symbols-outlined" id="linkOrder" href="/order">
-                    shopping_cart
-                </a>
-            </nav>
-        </div>
+      <div class="toolbar">
+        <h1>
+          <a class="navlink" href="/">
+            <img src="images/logo.svg" width="140" alt="Coffee Masters" />
+          </a>
+        </h1>
+        <nav>
+          <a
+            class="navlink material-symbols-outlined"
+            id="linkOrder"
+            href="/order"
+          >
+            shopping_cart
+          </a>
+          <span id="badge" hidden></span>
+        </nav>
+      </div>
     </header>
     <main></main>
-</body>
-
+  </body>
 </html>
