--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="apple-touch-icon" href="images/icons/icon.png" />
     <link rel="icon" href="images/icons/icon.png" />
+    <link rel="icon" href="images/icons/icon.png" />
+    <link rel="manifest" href="app.webmanifest">
     <script src="app.js" defer type="module"></script>
   </head>
 
