--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" href="images/icons/icon.png" />
     <link rel="icon" href="images/icons/icon.png" />
     <link rel="icon" href="images/icons/icon.png" />
-    <link rel="manifest" href="app.webmanifest">
+    <link rel="manifest" href="/manifest.json">
     <script src="app.js" defer type="module"></script>
   </head>
 
